src/main/java/compiler/grammar/setGrammarParser.java
// Generated from D:/Programs/IntelliJ IDEA 2019.3.4/proj/SetLanguage-master/src/main/java/compiler/grammar\setGrammar.g4 by ANTLR 4.8

package compiler.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class setGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, ASSIGN=2, SET=3, ELEMENT=4, INT_TYPE=5, STRING_TYPE=6, OPAR=7, 
		CPAR=8, OANGLEBR=9, CANGLEBR=10, OBRACKET=11, CBRACKET=12, COLON=13, PUSH=14, 
		PULL=15, NEGATION=16, CONTAIN=17, INSERSION=18, UNION=19, COMPLEMENTS=20, 
		CARTESIAN_PRODUCT=21, EQ=22, NEQ=23, IS=24, PLUS=25, IN=26, PRINT=27, 
		PRITTY_PRINT=28, IF=29, ELSE=30, WHILE=31, FOREACH=32, SWITCH=33, CASE=34, 
		DEFAULT=35, MAIN=36, FUNCTION=37, RETURN=38, INT=39, ID=40, STRING=41, 
		COMMENT=42, SPACES=43;
	public static final int
		RULE_parse = 0, RULE_main = 1, RULE_start = 2, RULE_instruction = 3, RULE_set_operations = 4, 
		RULE_set_operation = 5, RULE_create = 6, RULE_create_set = 7, RULE_create_element = 8, 
		RULE_create_string = 9, RULE_create_int = 10, RULE_name_object_set = 11, 
		RULE_name_object_element = 12, RULE_name_object_string = 13, RULE_name_object_int = 14, 
		RULE_push_in_set = 15, RULE_pull_from_set = 16, RULE_push_more = 17, RULE_pull_more = 18, 
		RULE_switch_stat = 19, RULE_case_block = 20, RULE_value = 21, RULE_if_stat = 22, 
		RULE_condition_block = 23, RULE_stat_block = 24, RULE_while_stat = 25, 
		RULE_foreach_stat = 26, RULE_condition = 27, RULE_condition_for_each = 28, 
		RULE_print = 29, RULE_print_expr = 30, RULE_function_call = 31, RULE_param_call = 32, 
		RULE_arg_call = 33, RULE_function = 34, RULE_stat_block_with_return = 35, 
		RULE_return_id = 36, RULE_param = 37, RULE_arg = 38, RULE_type = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "main", "start", "instruction", "set_operations", "set_operation", 
			"create", "create_set", "create_element", "create_string", "create_int", 
			"name_object_set", "name_object_element", "name_object_string", "name_object_int", 
			"push_in_set", "pull_from_set", "push_more", "pull_more", "switch_stat", 
			"case_block", "value", "if_stat", "condition_block", "stat_block", "while_stat", 
			"foreach_stat", "condition", "condition_for_each", "print", "print_expr", 
			"function_call", "param_call", "arg_call", "function", "stat_block_with_return", 
			"return_id", "param", "arg", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'='", "'set'", "'element'", "'integer'", "'string'", "'('", 
			"')'", "'<'", "'>'", "'{'", "'}'", "':'", "'<-'", "'->'", "'!'", "'<?>'", 
			"'-'", null, "'/'", "'*'", "'=='", "'!='", "'is'", null, "'in'", "'print'", 
			"'<<'", "'if'", "'else'", "'while'", "'forEach'", "'switch'", "'case'", 
			"'default'", "'main'", "'fun'", "'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "ASSIGN", "SET", "ELEMENT", "INT_TYPE", "STRING_TYPE", "OPAR", 
			"CPAR", "OANGLEBR", "CANGLEBR", "OBRACKET", "CBRACKET", "COLON", "PUSH", 
			"PULL", "NEGATION", "CONTAIN", "INSERSION", "UNION", "COMPLEMENTS", "CARTESIAN_PRODUCT", 
			"EQ", "NEQ", "IS", "PLUS", "IN", "PRINT", "PRITTY_PRINT", "IF", "ELSE", 
			"WHILE", "FOREACH", "SWITCH", "CASE", "DEFAULT", "MAIN", "FUNCTION", 
			"RETURN", "INT", "ID", "STRING", "COMMENT", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "setGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public setGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(setGrammarParser.EOF, 0); }
		public List<CreateContext> create() {
			return getRuleContexts(CreateContext.class);
		}
		public CreateContext create(int i) {
			return getRuleContext(CreateContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SET) | (1L << ELEMENT) | (1L << INT_TYPE) | (1L << STRING_TYPE) | (1L << ID))) != 0)) {
				{
				{
				setState(80);
				create();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				{
				setState(86);
				function();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			main();
			setState(93);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(setGrammarParser.MAIN, 0); }
		public TerminalNode OBRACKET() { return getToken(setGrammarParser.OBRACKET, 0); }
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public TerminalNode CBRACKET() { return getToken(setGrammarParser.CBRACKET, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(MAIN);
			setState(96);
			match(OBRACKET);
			setState(97);
			start();
			setState(98);
			match(CBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SET) | (1L << ELEMENT) | (1L << INT_TYPE) | (1L << STRING_TYPE) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << FOREACH) | (1L << SWITCH) | (1L << ID))) != 0)) {
				{
				{
				setState(100);
				instruction();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public CreateContext create() {
			return getRuleContext(CreateContext.class,0);
		}
		public Push_in_setContext push_in_set() {
			return getRuleContext(Push_in_setContext.class,0);
		}
		public Pull_from_setContext pull_from_set() {
			return getRuleContext(Pull_from_setContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public If_statContext if_stat() {
			return getRuleContext(If_statContext.class,0);
		}
		public While_statContext while_stat() {
			return getRuleContext(While_statContext.class,0);
		}
		public Foreach_statContext foreach_stat() {
			return getRuleContext(Foreach_statContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public Set_operationsContext set_operations() {
			return getRuleContext(Set_operationsContext.class,0);
		}
		public Switch_statContext switch_stat() {
			return getRuleContext(Switch_statContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_instruction);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				create();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				push_in_set();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				pull_from_set();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				print();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				if_stat();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(111);
				while_stat();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(112);
				foreach_stat();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(113);
				function_call();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(114);
				set_operations();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(115);
				switch_stat();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_operationsContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(setGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(setGrammarParser.ID, i);
		}
		public TerminalNode ASSIGN() { return getToken(setGrammarParser.ASSIGN, 0); }
		public Set_operationContext set_operation() {
			return getRuleContext(Set_operationContext.class,0);
		}
		public TerminalNode SET() { return getToken(setGrammarParser.SET, 0); }
		public Set_operationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_operations; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitSet_operations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Set_operationsContext set_operations() throws RecognitionException {
		Set_operationsContext _localctx = new Set_operationsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_set_operations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SET) {
				{
				setState(118);
				match(SET);
				}
			}

			setState(121);
			match(ID);
			setState(122);
			match(ASSIGN);
			setState(123);
			match(ID);
			setState(124);
			set_operation();
			setState(125);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_operationContext extends ParserRuleContext {
		public Set_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_operation; }
	 
		public Set_operationContext() { }
		public void copyFrom(Set_operationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UnionOperationContext extends Set_operationContext {
		public TerminalNode UNION() { return getToken(setGrammarParser.UNION, 0); }
		public UnionOperationContext(Set_operationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitUnionOperation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComplementsOperationContext extends Set_operationContext {
		public TerminalNode COMPLEMENTS() { return getToken(setGrammarParser.COMPLEMENTS, 0); }
		public ComplementsOperationContext(Set_operationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitComplementsOperation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class InsersionOperationContext extends Set_operationContext {
		public TerminalNode INSERSION() { return getToken(setGrammarParser.INSERSION, 0); }
		public InsersionOperationContext(Set_operationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitInsersionOperation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CartesianProductOperationContext extends Set_operationContext {
		public TerminalNode CARTESIAN_PRODUCT() { return getToken(setGrammarParser.CARTESIAN_PRODUCT, 0); }
		public CartesianProductOperationContext(Set_operationContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitCartesianProductOperation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Set_operationContext set_operation() throws RecognitionException {
		Set_operationContext _localctx = new Set_operationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_set_operation);
		try {
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INSERSION:
				_localctx = new InsersionOperationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(127);
				match(INSERSION);
				}
				break;
			case UNION:
				_localctx = new UnionOperationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				match(UNION);
				}
				break;
			case COMPLEMENTS:
				_localctx = new ComplementsOperationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				match(COMPLEMENTS);
				}
				break;
			case CARTESIAN_PRODUCT:
				_localctx = new CartesianProductOperationContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				match(CARTESIAN_PRODUCT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateContext extends ParserRuleContext {
		public Create_setContext create_set() {
			return getRuleContext(Create_setContext.class,0);
		}
		public Create_elementContext create_element() {
			return getRuleContext(Create_elementContext.class,0);
		}
		public Create_stringContext create_string() {
			return getRuleContext(Create_stringContext.class,0);
		}
		public Create_intContext create_int() {
			return getRuleContext(Create_intContext.class,0);
		}
		public Set_operationsContext set_operations() {
			return getRuleContext(Set_operationsContext.class,0);
		}
		public CreateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitCreate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateContext create() throws RecognitionException {
		CreateContext _localctx = new CreateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_create);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				create_set();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				create_element();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				create_string();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(136);
				create_int();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(137);
				set_operations();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_setContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(setGrammarParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(setGrammarParser.ASSIGN, 0); }
		public Name_object_setContext name_object_set() {
			return getRuleContext(Name_object_setContext.class,0);
		}
		public TerminalNode SET() { return getToken(setGrammarParser.SET, 0); }
		public Create_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_set; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitCreate_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_setContext create_set() throws RecognitionException {
		Create_setContext _localctx = new Create_setContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_create_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SET) {
				{
				setState(140);
				match(SET);
				}
			}

			setState(143);
			match(ID);
			setState(144);
			match(ASSIGN);
			setState(145);
			name_object_set();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_elementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(setGrammarParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(setGrammarParser.ASSIGN, 0); }
		public Name_object_elementContext name_object_element() {
			return getRuleContext(Name_object_elementContext.class,0);
		}
		public TerminalNode ELEMENT() { return getToken(setGrammarParser.ELEMENT, 0); }
		public Create_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_element; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitCreate_element(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_elementContext create_element() throws RecognitionException {
		Create_elementContext _localctx = new Create_elementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_create_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELEMENT) {
				{
				setState(147);
				match(ELEMENT);
				}
			}

			setState(150);
			match(ID);
			setState(151);
			match(ASSIGN);
			setState(152);
			name_object_element();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_stringContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(setGrammarParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(setGrammarParser.ASSIGN, 0); }
		public Name_object_stringContext name_object_string() {
			return getRuleContext(Name_object_stringContext.class,0);
		}
		public TerminalNode STRING_TYPE() { return getToken(setGrammarParser.STRING_TYPE, 0); }
		public Create_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_string; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitCreate_string(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_stringContext create_string() throws RecognitionException {
		Create_stringContext _localctx = new Create_stringContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_create_string);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING_TYPE) {
				{
				setState(154);
				match(STRING_TYPE);
				}
			}

			setState(157);
			match(ID);
			setState(158);
			match(ASSIGN);
			setState(159);
			name_object_string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_intContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(setGrammarParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(setGrammarParser.ASSIGN, 0); }
		public Name_object_intContext name_object_int() {
			return getRuleContext(Name_object_intContext.class,0);
		}
		public TerminalNode INT_TYPE() { return getToken(setGrammarParser.INT_TYPE, 0); }
		public Create_intContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_int; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof setGrammarVisitor ) return ((setGrammarVisitor<? extends T>)visitor).visitCreate_int(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_intContext create_int() throws RecognitionException {
		Create_intContext _localctx = new Create_intContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_create_int);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INT_TYPE) {
				{
				setState(161);
				match(INT_TYPE);
				}
			}

			setState(164);
			match(ID);
			setState(165);
			match(ASSIGN);
			setState(166);
			name_object_int();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
